# simple-reward-hacking

./: .gitignore  README.md  plot.py  pyproject.toml  train.py
configs/: zero3.yaml
scripts/: environment_setup.sh  instance_setup.sh  train.sh  train_3_3.sh  vllm.sh
src/vf_simple_reward_hacking/: __init__.py  prompts.py  submission.py
vf_simple_reward_hacking/: plot.py  vf_simple_reward_hacking.py
