[project]
name = "vf-simple-reward-hacking"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_simple_reward_hacking.py"]
